Changed Json Handler & Fixed Style Bug & Added missing Config
Changed the Way how the Client calls from Json Sources. This ables the launcher to call from self-made API's.
Fixed a Stylebug which could make the Pack buttons to overlap. and I added the missing Host config

--- a/assets/style/app.css
+++ b/assets/style/app.css
@@ -118,10 +118,9 @@
 
 /* Moditem styling */
 .modItem{ 
-    position: absolute;
     left: 10px;
     right: 10px;
-    top: 0px;
+    height: 60px;
     border-radius: 5px;
     background-color: #2980b9;
     display: flex; 
@@ -129,6 +128,7 @@
     color:black;
     transition:0.2s; 
     padding: 10px 10px 10px 10px;
+    margin-bottom: 10px;
 }
 .modItem:hover{background-color:#2980b9;color:#3498db;cursor:pointer;}
 .modItem img{ margin-right:10px; }
